--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.10.1",
+    "@mui/styles": "^5.9.3",
     "@types/styled-components": "^5.1.26",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.3.5",
-    "styled-normalize": "^8.0.7"
+    "styled-jsx": "^5.0.4"
   },
   "devDependencies": {
     "@types/node": "18.7.6",
