--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.10.1",
     "@mui/styles": "^5.9.3",
     "@types/styled-components": "^5.1.26",
+    "framer-motion": "^7.2.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
